--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body oncontextmenu="return false">
 
-<div id="root">
+<div id="root" data-video="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4">
 
 </div>
 
